[project]
name = "tyuiuratings"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "alembic>=1.15.2",
    "dishka>=1.5.3",
    "fastapi[all]>=0.115.12",
    "faststream[rabbit]>=0.5.39",
    "mypy>=1.15.0",
    "sqlalchemy>=2.0.40",
]
