[project]
name = "tyuiuratings"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "alembic>=1.15.2",
    "dishka>=1.5.3",
    "fastapi-cache2[redis]>=0.2.2",
    "fastapi[all]>=0.115.12",
    "faststream[rabbit]>=0.5.39",
    "mypy>=1.15.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "ruff>=0.11.9",
    "sqlalchemy>=2.0.40",
]
